objects/AccountOpportunityObjectRelations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccessToParentRecord__c</fullName>
        <label>AccessToParentRecord</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>ObjectAPIName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectRelation__c</fullName>
        <label>ObjectRelation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>AccountOpportunityObjectRelations</label>
</CustomObject>